fix unaligned input field

--- a/src/components/IPScan/AdvancedOptions/style.css
+++ b/src/components/IPScan/AdvancedOptions/style.css
@@ -6,6 +6,10 @@
 
   &.input-group {
     display: table;
+
+    & > input {
+      margin-bottom: 0;
+    }
   }
 }
 
